III-3203 Load user editor based on e-mail, not user id

--- a/src/management/users/users-list.html
+++ b/src/management/users/users-list.html
@@ -43,7 +43,7 @@
                         <td ng-bind="::user.email"></td>
                         <td ng-bind="::user.username"></td>
                         <td>
-                            <button type="button" ui-sref="management.users.edit({id: user.uuid})" class="btn btn-default">Bewerken</button>
+                            <button type="button" ui-sref="management.users.edit({email: user.email})" class="btn btn-default">Bewerken</button>
                         </td>
                     </tr>
                     </tbody>
