--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -110,13 +110,26 @@
 
       <div role="tabpanel" class="tab-pane" ng-show="isTabActive('history')">
         <div class="timeline">
-          <dl ng-repeat="placeAction in ::placeHistory track by $index">
-            <dt ng-bind="placeAction.date | date:'dd / MM / yyyy H:mm'"></dt>
-            <dd>
-              <span class="author" ng-if="placeAction.author">{{placeAction.author}}</span><br ng-if="placeAction.author"/>
-              <span class="description">{{placeAction.description}}</span>
-            </dd>
-          </dl>
+          <p ng-show="!placeHistory" class="text-center">
+            <i class="fa fa-circle-o-notch fa-spin fa-fw"></i><span class="sr-only" translate-once="preview.loading"></span>
+          </p>
+          <div ng-if="::placeHistory">
+            <dl ng-repeat="placeAction in ::placeHistory track by $index">
+              <dt ng-bind="::placeAction.date | date:'dd/MM/yyyy H:mm'"></dt>
+              <dd>
+                <span class="author" ng-if="placeAction.author" ng-bind="::placeAction.author"></span>
+                <br ng-if="::placeAction.author"/>
+                <span class="description" ng-bind="::placeAction.description"></span>
+                <div ng-if="::placeAction.api">
+                  API: <span class="api" ng-bind="::placeAction.api"></span>
+                </div>
+                <div ng-if="::placeAction.apiKey">
+                  API key: <span class="api" ng-bind="::placeAction.apiKey"></span>
+                  <span ng-if="::placeAction.consumerName">(<span class="consumerName" ng-bind="::placeAction.consumerName"></span>)</span>
+                </div>
+              </dd>
+            </dl>
+          </div>
         </div>
       </div>
 
