--- a/src/organizers/detail/organizer-detail.html
+++ b/src/organizers/detail/organizer-detail.html
@@ -62,7 +62,8 @@
           <span class="row-label" translate-once="organizer.manage.website"></span>
         </div>
         <td>
-          <span ng-bind="odc.organizer.url"></span>
+          <!-- TODO: fix this -->
+          <span ng-bind="odc.organizer.website">test</span>
         </td>
       </tr>
       <tr>
