--- a/src/organizers/detail/organizer-detail.html
+++ b/src/organizers/detail/organizer-detail.html
@@ -62,8 +62,7 @@
           <span class="row-label" translate-once="organizer.manage.website"></span>
         </div>
         <td>
-          <!-- TODO: fix this -->
-          <span ng-bind="odc.organizer.website">test</span>
+          <span ng-bind="odc.organizer.website"></span>
         </td>
       </tr>
       <tr>
