remove unnecessary true arg

--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -69,7 +69,7 @@
     ></div>
 
     <p ng-show="eventFormData.id === ''">
-      <a class="btn btn-primary titel-doorgaan" ng-click="validateEvent(true);">
+      <a class="btn btn-primary titel-doorgaan" ng-click="validateEvent();">
         <span translate-once="eventForm.step4.continue"></span>
         <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
       </a>
