--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -1,4 +1,5 @@
 <div ng-controller="EventFormStep4Controller as EventFormStep4">
+
   <a name="titel"></a>
   <section id="titel" ng-show="eventFormData.showStep4">
     <div class="step-title">
@@ -14,37 +15,23 @@
 
     <div class="row">
       <div class="col-md-8 col-lg-7">
-        <label
-          ng-show="eventFormData.isEvent"
-          translate-once="eventForm.step4.name_event"
-        ></label>
-        <label
-          ng-show="eventFormData.isPlace"
-          translate-once="eventForm.step4.name_place"
-        ></label>
+        <label ng-show="eventFormData.isEvent" translate-once="eventForm.step4.name_event"></label>
+        <label ng-show="eventFormData.isPlace" translate-once="eventForm.step4.name_place"></label>
 
         <div class="form-group-lg">
-          <input
-            type="text"
-            class="form-control"
-            ng-model="eventFormData.name"
-            ng-model-options="titleInputOptions"
-            ng-change="eventTitleChanged()"
-            focus-if="eventFormData.showStep4 && eventFormData.id === ''"
-            udb-auto-scroll
-          />
+          <input type="text"
+                 class="form-control"
+                 ng-model="eventFormData.name"
+                 ng-model-options="titleInputOptions"
+                 ng-change="eventTitleChanged()"
+                 focus-if="eventFormData.showStep4 && eventFormData.id === ''"
+                 udb-auto-scroll>
         </div>
 
         <div class="help-block">
           <p>
-            <span
-              ng-show="eventFormData.isEvent"
-              translate-once="eventForm.step4.help_event"
-            ></span>
-            <span
-              ng-show="eventFormData.isPlace"
-              translate-once="eventForm.step4.help_place"
-            ></span>
+            <span ng-show="eventFormData.isEvent" translate-once="eventForm.step4.help_event"></span>
+            <span ng-show="eventFormData.isPlace" translate-once="eventForm.step4.help_place"></span>
             <span translate-once="eventForm.step4.help_description"></span>
           </p>
         </div>
@@ -62,47 +49,40 @@
       </ul>
     </div>
 
-    <div
-      class="alert alert-danger"
-      translate-once="eventForm.step4.save_error"
-      ng-show="error"
-    ></div>
+    <div class="alert alert-danger"
+         translate-once="eventForm.step4.save_error"
+         ng-show="error">
+    </div>
 
     <p ng-show="eventFormData.id === ''">
-      <a class="btn btn-primary titel-doorgaan" ng-click="validateEvent();">
-        <span translate-once="eventForm.step4.continue"></span>
-        <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
+      <a class="btn btn-primary titel-doorgaan"
+          ng-click="validateEvent(true);">
+        <span translate-once="eventForm.step4.continue"></span> <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
       </a>
     </p>
+
   </section>
 
-  <div class="spinner" style="display: none">
+  <div class="spinner" style="display: none;">
     <i class="fa fa-circle-o-notch fa-spin"></i>
   </div>
 
   <a name="dubbeldetectie"></a>
   <section class="dubbeldetectie" ng-show="eventFormData.name !== ''">
+
     <div class="panel panel-info" ng-show="resultViewer.totalItems > 0">
       <div class="panel-body bg-info text-info">
-        <p
-          class="h2"
-          style="margin-top: 0"
-          translate-once="eventForm.step4.doubles_title"
-        ></p>
+        <p class="h2" style="margin-top: 0;" translate-once="eventForm.step4.doubles_title"></p>
         <p translate-once="eventForm.step4.doubles_help"></p>
 
         <div class="row clearfix" ng-if="eventFormData.getType() === 'event'">
-          <div
-            ng-repeat="event in resultViewer.events | filter:{'@type': 'Event'}"
-          >
+          <div ng-repeat="event in resultViewer.events | filter:{'@type': 'Event'}">
             <udb-event-suggestion></udb-event-suggestion>
           </div>
         </div>
 
         <div class="row clearfix" ng-if="eventFormData.getType() === 'place'">
-          <div
-            ng-repeat="event in resultViewer.events | filter:{'@type': 'Place'}"
-          >
+          <div ng-repeat="event in resultViewer.events | filter:{'@type': 'Place'}">
             <udb-place-suggestion></udb-place-suggestion>
           </div>
         </div>
@@ -110,31 +90,21 @@
     </div>
 
     <h3 ng-show="duplicatesSearched && resultViewer.totalItems > 0">
-      <span
-        translate-once="eventForm.step4.sure"
-        translate-values="{ name: '{{eventFormData.name}}' }"
-      ></span>
+      <span translate-once="eventForm.step4.sure" translate-values="{ name: '{{eventFormData.name}}' }"></span>
     </h3>
-    <ul
-      class="list-inline"
-      ng-show="duplicatesSearched && resultViewer.totalItems > 0"
-    >
+    <ul class="list-inline" ng-show="duplicatesSearched && resultViewer.totalItems > 0">
       <li>
-        <a
-          class="btn btn-default"
-          translate-once="eventForm.step4.return_dashboard"
-          href="dashboard"
-        ></a>
+        <a class="btn btn-default"
+           translate-once="eventForm.step4.return_dashboard"
+           href="dashboard"></a>
       </li>
       <li>
-        <a
-          class="btn btn-primary dubbeldetectie-doorgaan"
-          ng-click="saveEvent()"
-        >
-          <span translate-once="eventForm.step4.yes_continue"></span>
-          <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
+        <a class="btn btn-primary dubbeldetectie-doorgaan" ng-click="saveEvent()">
+          <span translate-once="eventForm.step4.yes_continue"></span> <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
         </a>
       </li>
     </ul>
+
   </section>
+
 </div>
