--- a/src/search/ui/place.directive.html
+++ b/src/search/ui/place.directive.html
@@ -22,7 +22,7 @@
   </div>
 
   <div class="col-sm-2">
-    <span translate-once="search.periodicOpen"></span>
+    <span></span>
   </div>
 
   <div class="col-sm-3 rv-specific-event-info">
