add class to textarea

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -51,7 +51,7 @@
                 <div class="form-group">
                   <textarea ng-blur="saveDescription()"
                             ng-focus="focusDescription()"
-                            class="form-control"
+                            class="form-control event-description"
                             ng-model="description"
                             rows="6"
                             udb-auto-scroll
