Change title to remove the v3 explicitness

--- a/src/management/roles/role-form.html
+++ b/src/management/roles/role-form.html
@@ -55,7 +55,7 @@
             </div>
             <div ng-if="editor.editConstraint">
                 <div class="form-group" udb-form-group>
-                    <label class="control-label" for="label-name-field">Bewerkrecht v3</label>
+                    <label class="control-label" for="label-name-field">Bewerkrecht</label>
                     <input id="constraint-v3-field"
                            class="form-control"
                            name="constraintv3"
