--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -77,7 +77,7 @@
                        ng-click="saveDescription(true)">
                     </a>
                   </p>
-                  <div class="alert alert-info" ng-switch="eventFormData.type.id">
+                  <div class="alert alert-info description-tips" ng-switch="eventFormData.type.id">
                     <p ng-switch-when="0.50.4.0.0" translate-once="eventForm.step5.tips.Concert"></p>
                     <p ng-switch-when="0.54.0.0.0" translate-once="eventForm.step5.tips.Dansvoorstelling"></p>
                     <p ng-switch-when="0.5.0.0.0" translate-once="eventForm.step5.tips.Festival"></p>
