Change 0.7.0.0.0 to match http://taxonomy.uitdatabank.be/api/domain/eventtype/classification

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -89,7 +89,7 @@
                     <p ng-switch-when="0.12.0.0.0" translate-once="eventForm.step5.tips.Opendeurdag"></p>
                     <p ng-switch-when="0.6.0.0.0" translate-once="eventForm.step5.tips.Beurs"></p>
                     <p ng-switch-when="0.0.0.0.0" translate-once="eventForm.step5.tips.Tentoonstelling"></p>
-                    <p ng-switch-when="0.7.0.0.0" translate-once="eventForm.step5.tips.Begeleide rondleiding"></p>
+                    <p ng-switch-when="0.7.0.0.0" translate-once="eventForm.step5.tips.Begeleide uitstap of rondleiding"></p>
                     <p ng-switch-when="0.3.1.0.0" translate-once="eventForm.step5.tips.Lessenreeks"></p>
                     <p ng-switch-when="0.3.1.0.1" translate-once="eventForm.step5.tips.Cursus met open sessies"></p>
                     <p ng-switch-when="0.57.0.0.0" translate-once="eventForm.step5.tips.Kamp of vakantie"></p>
