--- a/src/search/ui/search.html
+++ b/src/search/ui/search.html
@@ -119,6 +119,6 @@
     </div>
   </div>
     <div class="rv-loading-overlay" ng-show="resultViewer.loading">
-        <i class="fa fa-circle-o-notch fa-spin"></i> Zoeken…
+        <i class="fa fa-circle-o-notch fa-spin"></i> <span translate-once="search.search">Zoeken</span>…
     </div>
 </div>
