Finalize search results

--- a/src/search/ui/search.html
+++ b/src/search/ui/search.html
@@ -36,11 +36,9 @@
         <div class="rv-item-info">
 
             <div class="row" ng-hide="resultViewer.selectedOffers.length">
-                <div class="col-sm-5 rv-first-column">
-                    Wat
-                </div>
-                <div class="col-sm-2">  Waar   </div>
-                <div class="col-sm-2">  Wanneer   </div>
+                <div class="col-sm-5 rv-first-column" translate-once="search.what">Wat</div>
+                <div class="col-sm-2" translate-once="search.where">Waar</div>
+                <div class="col-sm-2" translate-once="search.when">Wanneer</div>
                 <div class="col-sm-3">
                     <div role="presentation" class="dropdown">
                         <span class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
