Translate Invoer-informatie

--- a/src/search/ui/search.html
+++ b/src/search/ui/search.html
@@ -28,7 +28,7 @@
           </div>
       </div>
 
-    <p class="rv-no-result-notice" ng-show="!resultViewer.loading && resultViewer.totalItems === 0" ng-cloak>
+    <p class="rv-no-result-notice" ng-show="!resultViewer.loading && resultViewer.totalItems === 0" ng-cloak translate-once="search.noEventsFound">
         Geen evenementen gevonden, probeer een andere zoekopdracht.
     </p>
 
