Translate Mijn zoekopdrachten

--- a/src/saved-searches/ui/saved-searches-list.html
+++ b/src/saved-searches/ui/saved-searches-list.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <h1>Mijn zoekopdrachten</h1>
+    <h1 translate-once="search.savedSearches.mySearches">Mijn zoekopdrachten</h1>
     <table class="table">
         <tr>
             <th class="saved-search-title-column">
