--- a/src/saved-searches/ui/saved-searches-list.html
+++ b/src/saved-searches/ui/saved-searches-list.html
@@ -3,7 +3,7 @@
     <table class="table">
         <tr>
             <th class="saved-search-title-column">
-                <strong>Titel</strong>
+                <strong translate-once="search.">Titel</strong>
             </th>
             <th>
                 Query
