Change icons that changed group or name

--- a/src/organizers/detail/organizer-detail.html
+++ b/src/organizers/detail/organizer-detail.html
@@ -10,7 +10,7 @@
       <button class="list-group-item"
               type="button"
               ui-sref="split.organizerEdit({id: odc.organizer.id})">
-        <i class="fa fa-pencil" aria-hidden="true"></i>
+        <i class="fas fa-pencil-alt" aria-hidden="true"></i>
         <span translate-once="organizer.manage.edit"></span>
       </button>
       <span ng-if="odc.isManageState()">
