--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -23,7 +23,7 @@
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
-                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  <span translate-once="preview.edit"></span> <span class="badge" ng-if="event.mainLanguage !== language" ng-bind="::event.mainLanguage"></span></button>
+                ng-click="openEditPage()"><i class="fas fa-pencil-alt" aria-hidden="true"></i>  <span translate-once="preview.edit"></span> <span class="badge" ng-if="event.mainLanguage !== language" ng-bind="::event.mainLanguage"></span></button>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
@@ -31,7 +31,7 @@
         <button ng-if="::permissions.duplication"
                 class="list-group-item"
                 type="button"
-                ui-sref='duplication.event(::{id: event.id})'><i class="fa fa-files-o" aria-hidden="true"></i>  <span translate-once="preview.duplicate"></span></button>
+                ui-sref='duplication.event(::{id: event.id})'><i class="far fa-copy" aria-hidden="true"></i>  <span translate-once="preview.duplicate"></span></button>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 href="#"
