--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -24,7 +24,7 @@
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
-                ng-click="openEditPage()"><i class="fa fa-pencil" aria-hidden="true"></i>  <span translate-once="preview.edit"></span> <span ng-if="place.mainLanguage !== language" ng-bind="'(' + place.mainLanguage + ')'"></span></button>
+                ng-click="openEditPage()"><i class="fas fa-pencil-alt" aria-hidden="true"></i>  <span translate-once="preview.edit"></span> <span ng-if="place.mainLanguage !== language" ng-bind="'(' + place.mainLanguage + ')'"></span></button>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
