--- a/src/search/ui/event.directive.html
+++ b/src/search/ui/event.directive.html
@@ -43,7 +43,7 @@
     <div class="rv-event-info-input udb-organizer"
          ng-show="resultViewer.activeSpecific.id === 'input'">
       <div>
-        <span class="fa fa-clock-o"></span>&nbsp;
+        <span class="far fa-clock"></span>&nbsp;
         <span ng-bind="event.modified | date : 'dd/MM/yyyy • HH:mm'"></span>
       </div>
       <div class="udb-email">
@@ -56,7 +56,7 @@
         </span>
       </div>
       <div class="udb-organizer-name">
-        <span class="fa fa-building-o"></span>&nbsp;
+        <span class="far fa-building"></span>&nbsp;
         <span ng-bind="event.organizer ? event.organizer.name : '-'"></span>
       </div>
     </div>
