Use correct icons

--- a/src/search/ui/event.directive.html
+++ b/src/search/ui/event.directive.html
@@ -3,7 +3,7 @@
     <div class="rv-item-sidebar">
       <div class="rv-selection-state" ng-class="{'disabled': resultViewer.querySelected}"
            ng-click="resultViewer.toggleSelect(event)">
-        <span class="fa" ng-class="resultViewer.isOfferSelected(event) ? 'fa-check-square' : 'fa-square-o'"></span>
+        <span ng-class="resultViewer.isOfferSelected(event) ? 'fas fa-check-square' : 'far fa-square'"></span>
       </div>
     </div>
 
