--- a/src/search/ui/search.html
+++ b/src/search/ui/search.html
@@ -74,7 +74,7 @@
             <div class="rv-item-sidebar">
                 <div class="rv-selection-state">
                     <span class="dropdown" uib-dropdown ng-hide="resultViewer.selectedOffers.length">
-                      <span class="dropdown-toggle fa {{resultViewer.selectionState.icon}}" uib-dropdown-toggle>
+                      <span class="dropdown-toggle {{resultViewer.selectionState.icon}}" uib-dropdown-toggle>
                       </span>
                       <ul class="dropdown-menu">
                           <li role="presentation" class="dropdown-header">Selecteer</li>
