Add the Fontawesome trash icon to delete a saved search

--- a/src/saved-searches/ui/saved-searches-list.html
+++ b/src/saved-searches/ui/saved-searches-list.html
@@ -27,7 +27,7 @@
                           ui-codemirror-opts="editorOptions"></textarea>
             </td>
             <td>
-                <a class="btn btn-default" ng-if="::savedSearch.id" ng-click="::deleteSavedSearch(savedSearch.id)"></a>
+                <a class="btn btn-default" ng-if="::savedSearch.id" ng-click="::deleteSavedSearch(savedSearch.id)"><i class="fa fa-trash"></i></a>
             </td>
         </tr>
     </table>
