Extend history with Auth0 client id

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -187,6 +187,9 @@
                   API key: <span class="api" ng-bind="::eventAction.apiKey"></span>
                   <span ng-if="::eventAction.consumerName">(<span class="consumerName" ng-bind="::eventAction.consumerName"></span>)</span>
                 </div>
+                <div ng-if="::eventAction.auth0ClientId">
+                  Auth0 client id: <span class="api" ng-bind="::eventAction.auth0ClientId"></span>
+                </div>
               </dd>
             </dl>
           </div>
