Show auth0 client name in history tab

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -195,6 +195,9 @@
                 <div ng-if="::eventAction.auth0ClientId">
                   Auth0 client id: <span class="api" ng-bind="::eventAction.auth0ClientId"></span>
                 </div>
+                <div ng-if="::eventAction.auth0ClientName">
+                  Auth0 client name: <span class="api" ng-bind="::eventAction.auth0ClientName"></span>
+                </div>
               </dd>
             </dl>
           </div>
