Use availability consistently for booking and status combination

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -34,7 +34,7 @@
                 ui-sref='duplication.event(::{id: event.id})'><i class="far fa-copy" aria-hidden="true"></i>  <span translate-once="preview.duplicate"></span></button>
         <a ng-if="::(permissions.editing && !isOmdApp)"
            class="list-group-item"
-           ng-href="{{ event.url + '/status' }}"><i class="far fa-calendar-check" aria-hidden="true"></i>  <span translate-once="preview.change_status"></span></a>
+           ng-href="{{ event.url + '/status' }}"><i class="far fa-calendar-check" aria-hidden="true"></i>  <span translate-once="preview.change_availability"></span></a>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 href="#"
