--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -31,7 +31,7 @@
                 ng-click="openTranslatePage()"><i class="fa fa-globe" aria-hidden="true"></i>  <span translate-once="preview.translate"></span></button>
         <a ng-if="::(permissions.editing && !isOmdApp)"
            class="list-group-item"
-           ng-href="{{ place.url + '/status' }}"><i class="far fa-calendar-check" aria-hidden="true"></i>  <span translate-once="preview.change_status"></span></a>
+           ng-href="{{ place.url + '/status' }}"><i class="far fa-calendar-check" aria-hidden="true"></i>  <span translate-once="preview.change_availability"></span></a>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 href="#"
