--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -24,6 +24,10 @@
                 class="list-group-item"
                 type="button"
                 ng-click="openEditPage()"><i class="fas fa-pencil-alt" aria-hidden="true"></i>  <span translate-once="preview.edit"></span> <span class="badge" ng-if="event.mainLanguage !== language" ng-bind="::event.mainLanguage"></span></button>
+        <button ng-if="::(permissions.editing && permissions.editingMovies)"
+                class="list-group-item"
+                type="button"
+                ng-click="openEditPageMovies()"><i class="fas fa-video" aria-hidden="true"></i>  <span translate-once="preview.editMovie"></span> <span class="badge" ng-if="event.mainLanguage !== language" ng-bind="::event.mainLanguage"></span></button>
         <button ng-if="::permissions.editing"
                 class="list-group-item"
                 type="button"
