--- a/src/event_form/steps/event-form-step1.html
+++ b/src/event_form/steps/event-form-step1.html
@@ -53,7 +53,7 @@
            href="" ng-click="resetEventType()"
            translate-once="eventForm.step1.change"></a>
         <div ng-if="isLessonSeries" class="alert alert-info lesson-series-info">
-         <p translate-once="preview.info_lesson_series"></p>
+         <p translate-once="eventForm.step1.info_lesson_series"></p>
         </div>
       </div>      
 
