--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -39,7 +39,7 @@
         <button ng-if="::(permissions.duplication && permissions.editingMovies)"
                 class="list-group-item"
                 type="button"
-                ng-click="duplicateMovie()"><i class="far fa-copy" aria-hidden="true"></i>  <span translate-once="preview.duplicate_as_movie"></span></button>
+                ng-click="duplicateMovie()"><i class="fas fa-video" aria-hidden="true"></i>  <span translate-once="preview.duplicate_as_movie"></span></button>
         <a ng-if="::(permissions.editing && !isOmdApp)"
            class="list-group-item"
            ng-href="{{ event.url + '/status' }}"><i class="far fa-calendar-check" aria-hidden="true"></i>  <span translate-once="preview.change_availability"></span></a>
