Disable validate button while event is being created

--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -55,8 +55,10 @@
     </div>
 
     <p ng-show="eventFormData.id === ''">
-      <a class="btn btn-primary titel-doorgaan"
-          ng-click="validateEvent(true);">
+      <strong>Disabled: {{isValidateButtonDisabled}}</strong>
+      <button class="btn btn-primary titel-doorgaan"
+          ng-disabled="isValidateButtonDisabled"
+          ng-click="validateEvent()">
         <span translate-once="eventForm.step4.continue"></span> <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
       </a>
     </p>
