--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -55,7 +55,7 @@
     </div>
 
     <p ng-show="eventFormData.id === ''">
-      <button class="btn btn-primary titel-doorgaan"
+      <a class="btn btn-primary titel-doorgaan"
           ng-disabled="isValidateButtonDisabled"
           ng-click="validateEvent()">
         <span translate-once="eventForm.step4.continue"></span> <i class="fa fa-circle-o-notch fa-spin" ng-show="saving"></i>
