Add info to modal header

--- a/src/search/ui/search-facilities-modal.html
+++ b/src/search/ui/search-facilities-modal.html
@@ -1,5 +1,6 @@
 <div class="modal-header">
   <h4 class="modal-title">Toegankelijkheidsinformatie</h4>
+  <a href="https://documentatie.uitdatabank.be/content/uitdatabank/latest/categorisatie/voorzieningen.html" target="_blank" rel="noopener noreferrer">Meer info</a>
 </div>
 <div class="modal-body">
 
