--- a/src/cultuurkuur/event-cultuurkuur.html
+++ b/src/cultuurkuur/event-cultuurkuur.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="alert alert-info" ng-if="::$ctrl.isIncomplete && $ctrl.forSchools">
-                <p>Bekijk je evenement op Cultuurkuur.be en voeg de juiste onderwijsniveaus toe zodat leerkrachten je vinden.</p>
+                <p>Bekijk je evenement op cultuurkuur.be en voeg de juiste onderwijsniveaus toe zodat leerkrachten je vinden.</p>
                 <a ng-href="{{::$ctrl.continueLink}}" target="_blank" class="btn btn-default btn-info">Doorgaan</a>
             </div>
         </div>
