--- a/src/organizers/detail/organizer-detail.html
+++ b/src/organizers/detail/organizer-detail.html
@@ -9,7 +9,8 @@
     <div class="list-group" ng-if="!odc.organizer.deleted">
       <button class="list-group-item"
               type="button"
-              ui-sref="split.organizerEdit({id: odc.organizer.id})">
+              ui-sref="split.organizerEdit({id: odc.organizer.id})"
+              ng-if="odc.canEdit()">
         <i class="fas fa-pencil-alt" aria-hidden="true"></i>
         <span translate-once="organizer.manage.edit"></span>
       </button>
